[gd_scene load_steps=7 format=2]

[ext_resource path="res://gameplay/ship/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/screen/battle_screen.gd" type="Script" id=2]
[ext_resource path="res://gameplay/screen/simple.png" type="Texture" id=3]
[ext_resource path="res://fonts/SourceHanSansHW-Regular.32.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/SourceHanSansHW-Regular.16.tres" type="DynamicFont" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 64 )

[node name="BattleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 576.0

[node name="Viewport" type="Viewport" parent="VBoxContainer/ViewportContainer"]
size = Vector2( 1024, 576 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Node2DRoot" type="Node2D" parent="VBoxContainer/ViewportContainer/Viewport"]

[node name="Simple" type="Sprite" parent="VBoxContainer/ViewportContainer/Viewport/Node2DRoot"]
self_modulate = Color( 0.88, 0.88, 0.88, 1 )
scale = Vector2( 1, 6 )
texture = ExtResource( 3 )
centered = false

[node name="Tween" type="Tween" parent="VBoxContainer/ViewportContainer/Viewport/Node2DRoot"]

[node name="WaterArea" type="Area2D" parent="VBoxContainer/ViewportContainer/Viewport/Node2DRoot"]

[node name="Sprite" type="Sprite" parent="VBoxContainer/ViewportContainer/Viewport/Node2DRoot/WaterArea"]
self_modulate = Color( 0.25098, 0.25098, 0.25098, 1 )
position = Vector2( 0, 500 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/ViewportContainer/Viewport/Node2DRoot/WaterArea"]
position = Vector2( 512, 564 )
shape = SubResource( 1 )

[node name="Player" parent="VBoxContainer/ViewportContainer/Viewport/Node2DRoot" instance=ExtResource( 1 )]
position = Vector2( 100, 500 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ViewportContainer"]
margin_right = 1024.0
margin_bottom = 576.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ViewportContainer/CenterContainer"]
margin_left = 512.0
margin_top = 264.0
margin_right = 512.0
margin_bottom = 312.0

[node name="Label" type="Label" parent="VBoxContainer/ViewportContainer/CenterContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_bottom = 48.0
custom_fonts/font = ExtResource( 4 )
percent_visible = 0.0

[node name="Tween" type="Tween" parent="VBoxContainer/ViewportContainer/CenterContainer/VBoxContainer/Label"]

[node name="Timer" type="Timer" parent="VBoxContainer/ViewportContainer/CenterContainer/VBoxContainer/Label"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Button" type="Button" parent="VBoxContainer/ViewportContainer/CenterContainer/VBoxContainer"]
visible = false
margin_top = 52.0
margin_right = 44.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 5 )
text = "戻る"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 768.0
size_flags_vertical = 3

[connection signal="timeout" from="VBoxContainer/ViewportContainer/CenterContainer/VBoxContainer/Label/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer/ViewportContainer/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
